# dworshak-prompt

./: .gitignore  LICENSE  README.md  build_pyz.py  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml
docs/: CHANGELOG.md  USERS.md
examples/: multiplexer_demo.py
src/dworshak_prompt/: __init__.py  __main__.py  _version.py  browser_utils.py  cli.py  cli_prompt.py  cli_stdlib.py  console_prompt.py  console_prompt_stdlib.py  dworkshak_prompt.py  dworshak_config.py  get.py  gui_prompt.py  keyboard_interrupt.py  messages.py  multiplexer.py  obtain.py  prompt_manager.py  server.py  web_prompt.py
src/dworshak_prompt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
